--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "life-nation-chms-api",
   "version": "1.0.0",
   "description": "Life Nation chms core",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/boakaidorborkamara/life-nation-chms-api/issues"
   },
-  "homepage": "https://github.com/boakaidorborkamara/life-nation-chms-api#readme"
+  "homepage": "https://github.com/boakaidorborkamara/life-nation-chms-api#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
+  }
 }
