--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Life Nation chms core",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,9 @@
   "homepage": "https://github.com/boakaidorborkamara/life-nation-chms-api#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.28.0",
+    "sqlite3": "^5.1.4"
   }
 }
